tests/errors/sem20.kt
// Expected error: assigning nullable value to non‑nullable variable x
fun main() {
    var x: Int = 5;
    x = null;
}